--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "firestarter-demo": {
+    "ProgressTracker": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -24,7 +24,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/firestarter-demo",
+            "outputPath": "dist/ProgressTracker",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -75,10 +75,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "firestarter-demo:build:production"
+              "buildTarget": "ProgressTracker:build:production"
             },
             "development": {
-              "buildTarget": "firestarter-demo:build:development"
+              "buildTarget": "ProgressTracker:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -86,7 +86,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "firestarter-demo:build"
+            "buildTarget": "ProgressTracker:build"
           }
         },
         "test": {
