--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "firestarter-demo",
+  "name": "ProgressTracker",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:firestarter-demo": "node dist/firestarter-demo/server/server.mjs"
+    "serve:ssr:ProgressTracker": "node dist/ProgressTracker/server/server.mjs"
   },
   "private": true,
   "dependencies": {
